<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginTop="40dp"
        android:hint="@string/edit_task_description"
        android:paddingBottom ="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@color/myPrimaryColor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:elevation="5dp"
        android:text="@string/priority_string"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="8dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <!-- Linear layout that contains all three priority buttons (high, medium, low)
        in a single line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="3">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/primary_text_light"
                android:id="@+id/buttonP1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/materialRed"
                android:text="@string/high_priority"
                android:layout_weight="1"
                android:onClick="onPrioritySelected"/>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/primary_text_light"
                android:id="@+id/buttonP2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/materialOrange"
                android:text="@string/med_priority"
                android:layout_weight="1"
                android:onClick="onPrioritySelected"/>

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/primary_text_light"
                android:id="@+id/buttonP3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/materialYellow"
                android:text="@string/low_priority"
                android:layout_weight="1"
                android:onClick="onPrioritySelected"/>

        </LinearLayout>

        <!-- RadioGroup for visible selection of a priority -->
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/radButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onPrioritySelected"
                android:layout_weight="1"
                android:theme="@style/WhiteRadioButton"/>

            <RadioButton
                android:id="@+id/radButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onPrioritySelected"
                android:layout_weight="1"
                android:theme="@style/WhiteRadioButton"/>

            <RadioButton
                android:id="@+id/radButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onPrioritySelected"
                android:layout_weight="1"
                android:theme="@style/WhiteRadioButton"/>

        </RadioGroup>

    </FrameLayout>

    <Button
        android:id="@+id/addButton"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:background="@color/myPrimaryColor"
        android:onClick="onClickAddTask"
        android:text="@string/add_button"
        android:textColor="@color/textColor" />

</LinearLayout>